--- a/Functions/functions.ipynb
+++ b/Functions/functions.ipynb
@@ -262,6 +262,215 @@
    "source": [
     "length_emp"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "7f722108",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If providing *args and **kwargs together, then you must give args first.\n",
+    "\n",
+    "def count_args(*args,**kwargs):\n",
+    "    return (len(args),len(kwargs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "70825cde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 3)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_args(1,2,3,name=\"raman\",id=\"101\",salary=20000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "96dc90ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stud_pass_fail(**kwargs):\n",
+    "    '''\n",
+    "    Take the name and marks for the multiple student as input\n",
+    "    return dictionary that contain the info of the student who has passed / failed in exam.\n",
+    "    \n",
+    "    '''\n",
+    "    dct={}\n",
+    "    for name,marks in kwargs.items():\n",
+    "        if marks>35:\n",
+    "            pf=\"Passed\"\n",
+    "        else:\n",
+    "            pf=\"Failed\"\n",
+    "            \n",
+    "        dct[name]=pf\n",
+    "            \n",
+    "    return dct\n",
+    "            \n",
+    "        # print(f'Hii {name},you have {pf}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c577a540",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "passed_failed=stud_pass_fail(mansi=95,komal=25,tanu=88,Dhanu=35)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "34483a2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mansi': 'Passed', 'komal': 'Failed', 'tanu': 'Passed', 'Dhanu': 'Failed'}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "passed_failed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9de46cd",
+   "metadata": {},
+   "source": [
+    "## Create the user profile based on the details provided to the functions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "ff64d1ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_profile(**kwargs):\n",
+    "    profile={}\n",
+    "    profile[\"Username\"]=kwargs[\"username\"]\n",
+    "    profile[\"FullName\"]=kwargs[\"fullname\"]\n",
+    "    profile[\"Age\"]=kwargs[\"age\"]\n",
+    "    profile[\"Location\"]=kwargs[\"location\"]\n",
+    "    \n",
+    "    return profile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "824cb047",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_user_profile=create_profile(username=\"mansi\",fullname=\"mansi mali\",age=23,location=\"kalyan\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "292043d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Username': 'mansi',\n",
+       " 'FullName': 'mansi mali',\n",
+       " 'Age': 23,\n",
+       " 'Location': 'kalyan'}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "create_user_profile"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24a35e58",
+   "metadata": {},
+   "source": [
+    "## Another way To create profile using for loop with dict\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "cbe0f3e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_pro(**kwargs):\n",
+    "    \n",
+    "    profile={}\n",
+    "    for key,value in kwargs.items():\n",
+    "        profile[key]=value\n",
+    "        \n",
+    "    return profile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "2c0b9245",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_user=create_pro(username=\"mansi\",fullname=\"mansi mali\",age=23,location=\"kalyan\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "fb27e53d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'username': 'mansi',\n",
+       " 'fullname': 'mansi mali',\n",
+       " 'age': 23,\n",
+       " 'location': 'kalyan'}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "create_user"
+   ]
   }
  ],
  "metadata": {
