--- a/Decorators/decorators.ipynb
+++ b/Decorators/decorators.ipynb
@@ -234,6 +234,124 @@
    "source": [
     "sq_list([1,2,3,4,5,6])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5023035b",
+   "metadata": {},
+   "source": [
+    "## Authentication Scenario"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "18b6b29a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "users={\n",
+    "    'raman':'raman@123',\n",
+    "    'naman':'naman@123',\n",
+    "    'sonal':'sonal@123',\n",
+    "    'monal':'monal@123'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "49bd92f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['raman', 'naman', 'sonal', 'monal'])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "users.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "263337c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'raman@123'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "users.get('raman')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "fe954a58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def authentication_user(func):\n",
+    "    def wrapper(username,password,*args,**kwargs):\n",
+    "        if username in users.keys() and password in users.get(username):\n",
+    "            print(\"welcome, Authentication Successfull.\")\n",
+    "            result=func(username,password,*args,**kwargs)\n",
+    "            \n",
+    "            return result\n",
+    "        \n",
+    "        else:\n",
+    "            print(\"Authentication Unsuccssful.\")\n",
+    "        \n",
+    "    return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "8477fa14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@authentication_user\n",
+    "def simple_interest_1(username,password,p,r,t):\n",
+    "    return (p*r*t)/100\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "19783ac0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome, Authentication Successfull.\n",
+      "230.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "si1=simple_interest_1('naman','naman@123',2300,5,2)\n",
+    "print(si1)"
+   ]
   }
  ],
  "metadata": {
