class and object done

--- a/oops/class.ipynb
+++ b/oops/class.ipynb
@@ -199,6 +199,265 @@
    "source": [
     "b.transfer(20000,89765433)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63f59989",
+   "metadata": {},
+   "source": [
+    "## Class attributes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "6d5c4ecc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class student_primary:\n",
+    "    \n",
+    "    section_a=78\n",
+    "    section_b=88\n",
+    "    \n",
+    "    class_teachar_a='riya'\n",
+    "    class_teacher_b='priya'\n",
+    "    \n",
+    "    def welcome():\n",
+    "        print(\"This is primary class Student\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f9813182",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s=student_primary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "397c7e86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'riya'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.class_teachar_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "dacd8899",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'priya'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.class_teacher_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "31e3f6a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.section_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "17c5bde4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "88"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.section_b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5387d30d",
+   "metadata": {},
+   "source": [
+    "## using of class attrubutes using @classmethod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36c2d4e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class stud:\n",
+    "    \n",
+    "    # class Attributes\n",
+    "    class_a=12\n",
+    "    class_b=34\n",
+    "    class_teacher_a='meena'\n",
+    "    class_teacher_b='Reena'\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def welcome(cls):\n",
+    "        print(f'The student of class a is {cls.class_a}. and class teacher is {cls.class_teacher_a}')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "792c873e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s=stud()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "2f79c6a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The student of class a is 12. and class teacher is meena\n"
+     ]
+    }
+   ],
+   "source": [
+    "s.welcome()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "945e6dcd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class car:\n",
+    "    \n",
+    "    # define class attributes\n",
+    "    \n",
+    "    greeting=\"welcome to the car worlds.\"\n",
+    "    \n",
+    "    # define instance attributes\n",
+    "    def __init__(self,manufacture,price):\n",
+    "        self.manufacture=manufacture\n",
+    "        self.price=price\n",
+    "        \n",
+    "    def hrundai_model_info(self):\n",
+    "        return \"we will different models for this manufactures like hrundai.\"\n",
+    "    \n",
+    "    def maruti_model_info(self):\n",
+    "        return \"we will different models for this manufactures like maruthi.\"\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def welcome(cls):\n",
+    "        print(cls.greeting)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "125672e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e1=car('hrundai',756600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "4df13bd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'we will different models for this manufactures like hrundai.'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e1.hrundai_model_info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f9846885",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'welcome to the car worlds.'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e1.greeting"
+   ]
   }
  ],
  "metadata": {
