basic and advanced

--- a/practice/numpy_exercise.ipynb
+++ b/practice/numpy_exercise.ipynb
@@ -558,6 +558,102 @@
     "min_index=new_array_reverse.argmin()\n",
     "min_index"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "688ace14",
+   "metadata": {},
+   "source": [
+    "## Create a 4×4 identity matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "7d0292d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0.],\n",
+       "       [0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "identity_matrix=np.eye(4)\n",
+    "identity_matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f3d4c8e",
+   "metadata": {},
+   "source": [
+    "##  Replace all odd numbers in an array with -1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "121c7ae6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0, -1,  2, -1,  4, -1,  6, -1,  8, -1])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array6=np.arange(10)\n",
+    "array6[array6 %2!=0]=-1\n",
+    "array6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7740aac7",
+   "metadata": {},
+   "source": [
+    "## 6. Extract all even numbers from a 2D array\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "9b7f3d71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 4, 6])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_2D=np.array([[1,2,3],[4,5,6]])\n",
+    "even_value=array_2D[array_2D %2==0]\n",
+    "even_value"
+   ]
   }
  ],
  "metadata": {
